# AI_ANC_Phone

./: .android-studio-setup.txt  .gitignore  .gitmodules  ANDROID_STUDIO_GUIDE.md  ARCHITECTURE.md  BUILD.md  BUILD_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_SUMMARY.md  HOW_TO_BUILD_APK.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/aianc/: AudioService.kt  BootReceiver.kt  MainActivity.kt  RNNoise.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
